--- a/paper_data_v3/irat_enet/data_collection.ipynb
+++ b/paper_data_v3/irat_enet/data_collection.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## 1) Human Sequences\n",
-    "Collect all human viruses from **1/1/2010 - 1/1/2024** from [GISAID](https://gisaid.org/)"
+    "Collect all human strains from **1/1/2010 - 1/1/2024** from [GISAID](https://gisaid.org/)"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
    "metadata": {},
    "source": [
     "## 3) Variant Sequences\n",
-    "Collect variant sequences (animal sequences that have emerged in humans)\n"
+    "Collect variant strains (animal strains that have emerged in humans)\n"
    ]
   },
   {
@@ -1323,7 +1323,7 @@
    "metadata": {},
    "source": [
     "## 4) Animal Sequences\n",
-    "Collect all animal sequences from **1/1/2020 - 1/1/2024**"
+    "Collect all animal strains from **1/1/2020 - 1/1/2024**"
    ]
   },
   {
