--- a/paper_data_v3/enet_predictions/random_sampling/enet_random_sampling.ipynb
+++ b/paper_data_v3/enet_predictions/random_sampling/enet_random_sampling.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Enet Random Samples\n",
-    "- Test if random sampling for training Emergenets affects qdistance between two strains\n",
+    "- Test if random sampling for training Emergenets affects E-distance between two strains\n",
     "- In our analysis, we used 3000 strains to train Enet when there are more than 3000 for a season\n",
     "- Use sequences from:\n",
     "    - North H1N1 2015-2016 through 2019-2020 flu seasons\n",
