--- a/examples/domseq_examples.ipynb
+++ b/examples/domseq_examples.ipynb
@@ -5,9 +5,9 @@
    "id": "fbbbd5e5",
    "metadata": {},
    "source": [
-    "# Predicting Future Dominant Strain with `emergenet.domseq`\n",
+    "# Predicting Seasonal Vaccine Strains with `emergenet.domseq`\n",
     "\n",
-    "This example H1N1 from 2021-2022, northern hemisphere to predict the dominant H1N1 strain for the 2022-2023 Season.\n",
+    "This example H1N1 from 2021-2022, northern hemisphere to predict the dominant H1N1 strain for the 2022-2023 season.\n",
     "\n",
     "## Installation"
    ]
