--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "04ee29ca",
+   "id": "c3f564ff",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,17 @@
    "execution_count": null,
    "id": "bfa863f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of human sequences: 6416\n",
+      "Counter({'H3': 2389, 'H1': 800, 'H5': 18, 'H7': 1})\n",
+      "Counter({'N2': 2392, 'N1': 815, 'N3': 1})\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Initialize the Enet\n",
@@ -152,7 +162,7 @@
     "\n",
     "**As of 2024-04-01, \"present_time\" = 2024-01-01.**\n",
     "\n",
-    "What if we want to evaluate the risk of **A/Indiana/08/2011** at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take a couple minutes."
+    "What if we want to evaluate the risk of **A/Indiana/08/2011** at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take a couple second."
    ]
   },
   {
