--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3f564ff",
+   "id": "e33d142a",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bfa863f6",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,17 @@
      "text": [
       "Number of human sequences: 6416\n",
       "Counter({'H3': 2389, 'H1': 800, 'H5': 18, 'H7': 1})\n",
-      "Counter({'N2': 2392, 'N1': 815, 'N3': 1})\n"
+      "Counter({'N2': 2392, 'N1': 815, 'N3': 1})\n",
+      "\n",
+      "HA Risk: 0.000055\n",
+      "NA Risk: 0.000079\n",
+      "\n",
+      "IRAT Emergence Score Prediction: 7.64\n",
+      "IRAT Low Emergence Score Prediction: 6.11\n",
+      "IRAT High Emergence Score Prediction: 9.07\n",
+      "\n",
+      "CPU times: user 1h 20min 44s, sys: 16.1 s, total: 1h 21min\n",
+      "Wall time: 1h 20min 58s\n"
      ]
     }
    ],
@@ -162,7 +172,7 @@
     "\n",
     "**As of 2024-04-01, \"present_time\" = 2024-01-01.**\n",
     "\n",
-    "What if we want to evaluate the risk of **A/Indiana/08/2011** at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take a couple second."
+    "What if we want to evaluate the risk of **A/Indiana/08/2011** at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take around 30 seconds (with `risk_sample_size=100`)."
    ]
   },
   {
