--- a/tex/grant/allbib.bib
+++ b/tex/grant/allbib.bib
@@ -8512,3 +8512,11 @@
   year		= {2020},
   publisher	= {Nature Publishing Group}
 }
+
+
+@article{wu2024emergenet,
+  title={Emergenet: A Digital Twin of Sequence Evolution for Scalable Emergence Risk Assessment of Animal Influenza A Strains},
+  author={Wu, Kevin Yuanbo and Li, Jin and Esser-Kahn, Aaron and Chattopadhyay, Ishanu},
+  journal={arXiv preprint arXiv:2411.17154},
+  year={2024}
+}
