--- a/tex/grant/preamble.tex
+++ b/tex/grant/preamble.tex
@@ -87,7 +87,7 @@
 \parindent=0pt 
 \lhead{}
 \pagestyle{fancy}
-\rfoot{\thepage} 
+\rfoot{} 
 \lfoot{\footnotesize} 
 \chead{\footnotesize Not For Public Release} 
 \chead{} 
